--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pepesan",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "description": "Simple automatic WhatsApp message responder",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@adiwajshing/baileys": "^4.4.0",
+    "@adiwajshing/keyed-db": "^0.2.4",
     "@hapi/boom": "^10.0.0",
     "axios": "^1.1.3",
     "buffer-to-data-url": "^1.0.0",
