--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "prepare": "tsc",
     "watch": "tsc --watch",
-    "example": "tsc && node ./example/index.js",
+    "example": "tsc && nodemon ./example/index.js",
     "test": "tsc && jest",
     "watch-test": "tsc && jest --watch-all",
     "dev": "nodemon ./src/index.ts",
-    "debug": "nodemon --exec \"node --inspect-brk=0.0.0.0:9229 --require ts-node/register ./example/index.ts\""
+    "debug": "nodemon --exec \"node --inspect-brk=0.0.0.0:9229 --require ts-node/register ./example/index.js\""
   },
   "author": "mqad21",
   "license": "ISC",
