--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "homepage": "https://github.com/mqad21/pepesan",
   "devDependencies": {
     "@jest/globals": "^29.2.2",
+    "@types/express": "^4.17.17",
+    "@types/qrcode": "^1.5.2",
     "@types/ws": "^8.5.3",
     "jest": "^29.2.2",
     "jest-circus": "^29.3.1",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.0.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
@@ -36,7 +38,9 @@
     "@whiskeysockets/baileys": "^6.4.0",
     "axios": "^1.1.3",
     "buffer-to-data-url": "^1.0.0",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.25.3",
     "sqlite3": "^5.1.2"
