--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pepesan",
-  "version": "3.4.4",
+  "version": "3.4.5",
   "description": "Simple automatic WhatsApp message responder",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -40,6 +40,7 @@
     "buffer-to-data-url": "^1.0.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "jimp": "^0.16.13",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.25.3",
